--- a/index.html
+++ b/index.html
@@ -4,13 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Momentum</title>
 </head>
 <body>
-    <div class="hello">
-        <h1>Catche me!</h1>
+    <form id="login-form" class="hidden">
+        <input 
+            required
+            maxlength="15"    
+            type="text" 
+            placeholder="Please enter your name"
+        />
+        <input type="submit" value="login" />
+    </form>
+    <h2 id="clock">00:00:00</h2>
+    <h1 id="greeting" class="hidden"></h1>
+    <form id="to-do">
+        <input placeholder="Please write and press enter key" required>
+    </form>
+        <ul id="to-do-list"></ul>
+    <div id ="quotes">
+        <span></span>
+        <span></span>
     </div>
-    <script src="app.js"></script>
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
+    <script src="js/greetings.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 </html>
